--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "nuxt": "^2.0.0",
